# info_overlay

./: CMakeLists.txt  README  info_overlay.kdev4
.kdev4/: info_overlay.kdev4
AppDir/: AppRun  info_overlay.desktop
src/: .qmlls.ini  CMakeLists.txt  OverlayAdaptor.h  main.cpp
src/qml/: Main.qml
